--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,6 +2,11 @@ FROM mcr.microsoft.com/devcontainers/python:1-3.12
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
+RUN \
+    cat /proc/version \
+    && ls /etc/apt \
+    && cat /etc/apt/sources.list
+
 # Uninstall pre-installed formatting and linting tools
 # They would conflict with our pinned versions
 RUN \
@@ -9,8 +14,6 @@ RUN \
     && pipx uninstall pycodestyle \
     && pipx uninstall mypy \
     && pipx uninstall pylint
-
-RUN cat /etc/apt/sources.list
 
 RUN \
     curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
